--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-back",
+  "name": "fed22d-users-back",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "mongodb": "^5.1.0",
     "morgan": "~1.9.1"
   }
 }
